# setui

./: README.md  docker-compose.yaml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/actions/ setup-node-pnpm/: action.yml
.github/workflows/: release.yml  test.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  ob.rs  redis.rs  sqlite.rs
src/components/: app-sidebar.tsx  connection-item.tsx  layout.tsx  typography.tsx
src/features/connection/: constants.ts  create-connection.tsx  edit-connection.tsx  item-connection.tsx  schema.ts
src/features/keys/: constants.tsx  key-content.tsx  key-header.tsx  key-view.tsx
src/features/keys/components/: key-view.tsx
src/features/new-connection/components/: create-connection.tsx
src/features/tabs/: tab-layout.tsx
src/hooks/: use-window-size.tsx
src/lib/: utils.ts
src/pages/: home.tsx
src/routes/: index.tsx
src/store/: connection.spec.ts  connection.ts  tabs.spec.ts  tabs.ts
