[package]
name = "setui"
version = "0.1.0"
description = "A the best ui for redis in react + rust!"
authors = ["Erick <erick.jesus2060@gmail.com>"]
edition = "2021"

[lib]
name = "setui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.0", features = ["bundled"] }
log = "0.4.22"
redis = "0.27.5"

[dev-dependencies]
serial_test = "3.2.0"
